updated for changes to CimHandler